--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "@popperjs/core": "^2.10.2",
     "axios": "^0.24.0",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^4.4.1",
     "core-js": "^3.6.5",
+    "jquery": "^3.6.0",
     "node-sass": "^6.0.1",
+    "popper.js": "^1.16.1",
     "vue": "^2.6.11"
   },
   "devDependencies": {
